--- a/tahfizh-leadership.html
+++ b/tahfizh-leadership.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tahfizh Leadership - Muhammad Azzam As Tsabit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -17,19 +17,13 @@
   <main>
     <section class="section">
       <h2>Description</h2>
-      <p>
-        In addition to memorizing the Quran, this program also provided intensive training 
-        in leadership and public speaking. I was also one of those given the opportunity to 
-        speak on webinars, both on my own topic and as a guest speaker.
-      </p>
+      <p>In addition to memorizing the Quran, this program also provided intensive training in leadership and public speaking. I was also one of those given the opportunity to speak on webinars, both on my own topic and as a guest speaker.</p>
     </section>
 
-    <!-- Galeri Foto Baru -->
     <section class="section">
       <h2>Gallery</h2>
       <div class="gallery-container">
         <div class="gallery-slider">
-          <!-- Contoh placeholder; ganti dengan gambar aktual -->
           <img src="pic/tahfizh-leadership/image1.jpg" alt="Image 1">
           <img src="pic/tahfizh-leadership/image2.jpg" alt="Image 2">
           <img src="pic/tahfizh-leadership/image3.jpg" alt="Image 3">
@@ -59,13 +53,10 @@
           <img src="pic/tahfizh-leadership/image27.jpg" alt="Image 27">
           <img src="pic/tahfizh-leadership/image28.jpg" alt="Image 28">
           <img src="pic/tahfizh-leadership/image29.jpg" alt="Image 29">
-          <!-- Tambahkan lebih banyak <img> sesuai gambar di folder -->
         </div>
         <button class="gallery-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
         <button class="gallery-btn next-btn"><i class="fas fa-chevron-right"></i></button>
-        <div class="gallery-indicators">
-          <!-- Indikator titik akan dibuat secara dinamis oleh JS -->
-        </div>
+        <div class="gallery-indicators"></div>
       </div>
     </section>
 
@@ -74,17 +65,15 @@
     </div>
   </main>
 
-  <!-- Modal untuk tampilan gambar penuh -->
   <div id="image-modal" class="modal">
     <span class="modal-close">&times;</span>
     <img class="modal-content" id="modal-image" alt="Full Image">
   </div>
 
-  <footer class="contact-footer">
-    <h2>Contact</h2>
-    <p>Email: azzamtsabit@gmail.com | Phone: +62 878 9735 6155 | LinkedIn: linkedin.com/in/muhammad-azzam-astsabit</p>
+  <footer class="copyright-footer">
+    <p>©2026 Muhammad Azzam As Tsabit</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
